# trfa

./: LICENSE  pyproject.toml
src/trfa/: __init__.py  module.py
